# iro

./: CONFIG.md  Cargo.toml  README.md  SETUP.md  STYLES.md
src/: color_extractor.rs  config.rs  config_generator.rs  gui.rs  gui_viewer.py  main.rs  palette.rs  template_engine.rs
templates/: kitty.conf  shell_colors.sh  waybar.css
